force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__IRS_Deduction_Value__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__IRS_Deduction_Value__c</fullName>
    <label>IRS Deduction Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>