force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Is_Ascend_Community_Gift__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Ascend_Community_Gift__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Ascend Community Gift</label>
    <type>Checkbox</type>
</CustomField>