force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Is_Gift_Aid_Distribution__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Gift_Aid_Distribution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Gift Aid Distribution</label>
    <type>Checkbox</type>
</CustomField>