force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Last_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Last_Payment_Amount__c</fullName>
    <description>The total amount group by last pledge payment date (Max payment credit date in GH)</description>
    <label>Last Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>