force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Last_Payment_Date_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Last_Payment_Date_Roll_Up__c</fullName>
    <label>Last Payment Date</label>
    <summarizedField>ucinn_ascendv2__Designation_Detail__c.ucinn_ascendv2__Last_Pledge_Payment_Date_Roll_Up__c</summarizedField>
    <summaryForeignKey>ucinn_ascendv2__Designation_Detail__c.ucinn_ascendv2__Opportunity__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>