force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Matched_Percentage_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Matched_Percentage_Roll_Up__c</fullName>
    <label>Matched Percentage</label>
    <summarizedField>ucinn_ascendv2__Designation_Detail__c.ucinn_ascendv2__Matched_Percentage__c</summarizedField>
    <summaryForeignKey>ucinn_ascendv2__Designation_Detail__c.ucinn_ascendv2__Opportunity__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>