force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Matching_Challenge_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Matching_Challenge_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pledge that is created from this Sponsor record</description>
    <inlineHelpText>Pledge that is created from this Sponsor record</inlineHelpText>
    <label>Matching Challenge Sponsor</label>
    <referenceTo>ucinn_ascendv2__Matching_Challenge_Sponsor__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities_Matching_Challenge_Sponsor</relationshipName>
    <type>Lookup</type>
</CustomField>