force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Non_Gift_Amount_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Non_Gift_Amount_Roll_Up__c</fullName>
    <description>Sum of Non_Gift_Amount_Roll_Up__c for all child designation details of the opportunity.</description>
    <inlineHelpText>Sum of Non_Gift_Amount_Roll_Up__c for all child designation details of the opportunity.</inlineHelpText>
    <label>Non-Gift Amount</label>
    <summarizedField>ucinn_ascendv2__Designation_Detail__c.ucinn_ascendv2__Non_Gift_Amount_Roll_Up__c</summarizedField>
    <summaryForeignKey>ucinn_ascendv2__Designation_Detail__c.ucinn_ascendv2__Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>