force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Non_Gift_Operating_Entity_Amount__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Non_Gift_Operating_Entity_Amount__c</fullName>
    <label>Non-Gift Operating Entity Amount (DEPR)</label>
    <summarizedField>ucinn_ascendv2__Designation_Detail__c.ucinn_ascendv2__Operating_Entity_Amount__c</summarizedField>
    <summaryForeignKey>ucinn_ascendv2__Designation_Detail__c.ucinn_ascendv2__Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>