force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Non_Gift_Transaction_Amount_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Non_Gift_Transaction_Amount_Roll_Up__c</fullName>
    <label>Non-Gift Transaction Amount    Roll Up</label>
    <summarizedField>ucinn_ascendv2__Designation_Detail__c.ucinn_ascendv2__Non_Gift_Transaction_Amount__c</summarizedField>
    <summaryForeignKey>ucinn_ascendv2__Designation_Detail__c.ucinn_ascendv2__Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>