force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Number_of_Payments_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Number_of_Payments_Roll_Up__c</fullName>
    <inlineHelpText>This is the sum of all related Designation Detail records&apos; &quot;Number Of Payments&quot; field value. If there are 2 Designation Detail records, and each of them have received three (3) payments, this field will have a value of six (6). Payment records of all status values are included in this count.</inlineHelpText>
    <label>Number of Payments</label>
    <summarizedField>ucinn_ascendv2__Designation_Detail__c.ucinn_ascendv2__Number_of_Payments_to_Date_Roll_Up__c</summarizedField>
    <summaryForeignKey>ucinn_ascendv2__Designation_Detail__c.ucinn_ascendv2__Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>