force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Operating_Entity__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Operating_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operating Entity</label>
    <referenceTo>ucinn_ascendv2__Operating_Entity__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>