force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Operating_Entity_Trust_Face_Value__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Operating_Entity_Trust_Face_Value__c</fullName>
    <label>Operating Entity Trust Face Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>