force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Payer_Address_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Payer_Address_Encrypted__c</fullName>
    <description>Address Id that is encrypted, used for external payments.</description>
    <inlineHelpText>Address Id that is encrypted, used for external payments.</inlineHelpText>
    <label>Payer Address</label>
    <length>100</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>