force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Payment_Gateway_Setting_CMT__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Payment_Gateway_Setting_CMT__c</fullName>
    <inlineHelpText>This value is used to direct the transaction during an adjustment or correction to the proper payment gateway used at creation.</inlineHelpText>
    <label>Payment Gateway &amp; Setting CMT</label>
    <length>45</length>
    <type>Text</type>
</CustomField>