force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Payment_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Payment_Group_ID__c</fullName>
    <label>Payment Group ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>