force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Payout_Rate__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Payout_Rate__c</fullName>
    <label>Payout Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>