force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Pledge_Date_FY_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Pledge_Date_FY_Formula__c</fullName>
    <description>Fiscal Year based on Pledge Date/Credit Date. Record Type Change, Pledge_Date__c = Credit_Date__c</description>
    <formula>TEXT(IF (MONTH( ucinn_ascendv2__Credit_Date__c  ) &gt;= 7 &amp;&amp; MONTH(ucinn_ascendv2__Credit_Date__c  ) &lt;= 12 ,YEAR(ucinn_ascendv2__Credit_Date__c  )+1 , YEAR( ucinn_ascendv2__Credit_Date__c )))</formula>
    <label>Pledge Date FY</label>
    <type>Text</type>
</CustomField>