force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Pledge_Gift_Account__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Pledge_Gift_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associate the Pledge/Gift Opportunities to Organization for displaying the related list on ascend mobile</description>
    <label>Pledge / Gift Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pledges / Gifts (Organization)</relationshipLabel>
    <relationshipName>Opportunities_Pledge_Gift_Account</relationshipName>
    <type>Lookup</type>
</CustomField>