force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Pledge_Receivable_Notes__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Pledge_Receivable_Notes__c</fullName>
    <description>For RFA Reconciliation Notes</description>
    <inlineHelpText>For RFA Reconciliation Notes</inlineHelpText>
    <label>Pledge Receivable Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>