force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Pledge_Reminder_Preference__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Pledge_Reminder_Preference__c</fullName>
    <description>How the donor wishes to be reminded of the pledge</description>
    <inlineHelpText>How the donor wishes to be reminded of the pledge</inlineHelpText>
    <label>Pledge Reminder Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Email and Mail</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Personal Visit</fullName>
            </value>
            <value>
                <fullName>Send to Third Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>