force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Pledge_Reminder_Template_ID_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Pledge_Reminder_Template_ID_Formula__c</fullName>
    <description>Template to use based on payments</description>
    <formula>IF (ucinn_ascendv2__Number_of_Pledges_Roll_Up__c = 1, &quot;a2Li0000000zhXM&quot;,&quot;a2Li0000000zhXR&quot;)</formula>
    <label>Pledge Reminder Template ID (DEPRECATED</label>
    <type>Text</type>
</CustomField>