force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Pledge_Underpay_Threshold_Percentage__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Pledge_Underpay_Threshold_Percentage__c</fullName>
    <inlineHelpText>This field establishes the maximum under-payment allowed to consider an installment to be paid. For example, if the installment is USD $100, and this value is 3%, then USD $97 will consider the installment to be paid; however, this is only valid for multi-currency environments and when a mix of currencies or a third currency is used to pay a pledge installment. Non multi-currency orgs will not be impacted by this field.</inlineHelpText>
    <label>Pledge Underpay Threshold Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>