force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Pledge_Underpayment_Total__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Pledge_Underpayment_Total__c</fullName>
    <inlineHelpText>The total of underpayments for the pledge when processing multi-currency payments.</inlineHelpText>
    <label>Pledge Underpayment Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>