force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Proposal__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Proposal that lead to the pledge.</description>
    <label>Proposal</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The opportunity selected is not a proposal type.</errorMessage>
        <filterItems>
            <field>Opportunity.RecordType.DeveloperName</field>
            <operation>contains</operation>
            <value>Proposal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Opportunity)</relationshipLabel>
    <relationshipName>Opportunities_Proposal</relationshipName>
    <type>Lookup</type>
</CustomField>