force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Proposal_Contact__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Proposal_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Opportunities_Proposal_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>