force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Proposal_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Proposal_ID__c</fullName>
    <label>Proposal ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>