force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Remaining_Amount_Due_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Remaining_Amount_Due_Formula__c</fullName>
    <description>CC 10/5 Uses Amount Paid to Date Roll up instead of Designation_Detail_Amount_Paid_to_Date__c to exclude designation mistmatch. Update: This includes all payments made for the opportunity to determine remaining amount due. Record Type Change, Pledge_Amount__c = Funded_Amount__c = Amount. previous logic = IF(Amount - Amount_Paid_to_Date__c &gt; 0,
Amount - Amount_Paid_to_Date__c, 0)</description>
    <formula>IF((RecordType.DeveloperName == &apos;Recurring_Gift&apos;),
    0.00,
    IF(ISPICKVAL(StageName, &quot;Written Off&quot;) || ISPICKVAL(StageName, &quot;Cancelled&quot;) || ISPICKVAL(StageName, &quot;Void&quot;),
        0.00,
        IF(Amount - ucinn_ascendv2__Amount_Paid_to_Date_Roll_Up__c &gt; 0,
            IF(ucinn_ascendv2__Pledge_Underpayment_Total__c &lt;= 0,
                Amount - ucinn_ascendv2__Amount_Paid_to_Date_Roll_Up__c,
                Amount - ucinn_ascendv2__Amount_Paid_to_Date_Roll_Up__c - ucinn_ascendv2__Pledge_Underpayment_Total__c),
        0.00)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>