force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Remaining_Amt_Due_Same_Desig_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Remaining_Amt_Due_Same_Desig_Formula__c</fullName>
    <description>This is the remaining amount due for an opportunity considering only the payments whose designations are the same as opportunity designation</description>
    <formula>IF((RecordType.DeveloperName == &apos;Recurring_Gift&apos;), 0.00,
IF(Amount - ucinn_ascendv2__Amount_Paid_to_Date_Same_Desig_Roll_Up__c &gt; 0,
Amount - ucinn_ascendv2__Amount_Paid_to_Date_Same_Desig_Roll_Up__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Amount Due Same Designation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>