force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Remaining_Operating_Entity_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Remaining_Operating_Entity_Amount_Due__c</fullName>
    <formula>IF((RecordType.DeveloperName == &apos;Recurring_Gift&apos;), 0.00,
IF(ISPICKVAL(StageName, &quot;Written Off&quot;) || ISPICKVAL(StageName, &quot;Cancelled&quot;) || ISPICKVAL(StageName, &quot;Void&quot;), 0.00, IF(ucinn_ascendv2__Operating_Entity_Amount__c  - ucinn_ascendv2__Operating_Entity_Amount_Paid_to_Date__c &gt; 0,ucinn_ascendv2__Operating_Entity_Amount__c  - ucinn_ascendv2__Operating_Entity_Amount_Paid_to_Date__c, 0)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Operating Entity Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>